test_case/rust-lang_rust/84637_828410767_2.rs

replacement(&foo); //~ ERROR use of deprecated
